@@ -20,9 +20,9 @@
 package com.jsdiff.xlsql.database;
 
 import java.io.File;
+import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.io.FileInputStream;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.sql.Connection;
@@ -36,7 +36,17 @@ import java.util.logging.SimpleFormatter;
 
 
 /**
- * Represents an instance of xlSQL
+ * xlInstance - xlSQL配置实例（单例模式）
+ * 
+ * <p>该类使用单例模式管理xlSQL的配置信息，包括：</p>
+ * <ul>
+ *   <li>数据库引擎配置（HSQLDB或MySQL）</li>
+ *   <li>连接参数（URL、用户名、密码等）</li>
+ *   <li>日志配置</li>
+ *   <li>配置文件管理</li>
+ * </ul>
+ * 
+ * <p>支持从配置文件、系统属性和环境变量加载配置。</p>
  *
  * @author daichangya
  *
@@ -46,73 +56,101 @@ import java.util.logging.SimpleFormatter;
  * Modified to use Properties instead of XML configuration
  */
 public class xlInstance {
+    /** 日志记录器 */
     private static Logger logger = Logger.getLogger(xlInstance.class.getName());
-    private static xlInstance instance;
+    /** 单例实例（使用volatile确保可见性） */
+    private static volatile xlInstance instance;
+    /** 同步锁对象，用于线程安全的单例实现 */
+    private static final Object lock = new Object();
+    /** xlSQL默认配置目录路径 */
     private static final String XLSQL_DEFAULT_PATH = System.getProperty("user.home") +File.separator+".xlsql";
+    /** 默认配置文件名称 */
     private static final String XLSQL_DEFAULT_CONFIG_PATH = "xlsql_config.properties";
+    /** 默认日志文件名称 */
     private static final String XLSQL_DEFAULT_LOG_PATH = "xlsql.log";
+    /** 环境变量：配置文件路径 */
+    private static final String XLSQL_CONFIG_PATH_ENV = "XLSQL_CONFIG_PATH";
+    /** 环境变量：日志文件路径 */
+    private static final String XLSQL_LOG_PATH_ENV = "XLSQL_LOG_PATH";
 
+    /** 配置文件名称 */
     private String configFileName;
+    /** 配置文件对象 */
     private File file;
+    /** 配置属性对象 */
     private Properties configProps;
+    /** 配置是否被修改的标志 */
     private boolean configModified = false;
 
-    //
+    /** 日志文件路径 */
     private String log;
+    /** 数据库引擎名称（hsqldb或mysql） */
     private String engine;
+    /** 数据库路径 */
     private String database;
 
-    //
+    /** 数据库驱动类名 */
     private String driver;
+    /** 数据库连接URL */
     private String url;
+    /** 数据库模式（schema）名称 */
     private String schema;
+    /** 数据库用户名 */
     private String user;
+    /** 数据库密码 */
     private String password;
 
     /**
-     * Creates an xlInstance with the name xlsql
+     * 获取xlInstance单例实例（使用默认配置文件名）
+     * 
+     * <p>使用默认配置文件"xlsql_config.properties"创建实例。</p>
      *
-     * @return xlInstance
-     *
-     * @throws xlException [Tbd. When?]
+     * @return xlInstance单例实例
+     * @throws xlException 如果实例创建失败则抛出异常
      */
     public static xlInstance getInstance() throws xlException {
         return getInstance(XLSQL_DEFAULT_CONFIG_PATH);
     }
 
     /**
+     * 断开连接并清除单例实例
+     * 
+     * <p>该方法用于清理单例实例，释放资源。此方法是线程安全的。</p>
      */
     public static void disconnect() {
-        instance = null;
+        synchronized (lock) {
+            instance = null;
+        }
     }
 
     /**
-     * Creates an xlInstance
+     * 获取xlInstance单例实例（使用指定配置文件名）
+     * 
+     * <p>使用双重检查锁定模式确保线程安全。如果实例已存在则直接返回，
+     * 否则创建新实例。</p>
      *
-     * @param cfg name of configuration [cfg]_config.properties on disk
-     *
-     * @return xlInstance
-     *
-     * @throws xlException [Tbd. When?]
+     * @param cfg 配置文件名（如"xlsql_config.properties"）
+     * @return xlInstance单例实例
+     * @throws xlException 如果实例创建失败则抛出异常
      */
     public static xlInstance getInstance(String cfg) throws xlException {
-        xlInstance ret = null;
-
         if (cfg == null) {
             cfg = XLSQL_DEFAULT_CONFIG_PATH;
         }
 
+        // 双重检查锁定模式，确保线程安全
         if (instance == null) {
-            ret = new xlInstance(cfg);
-        } else {
-            ret = instance;
+            synchronized (lock) {
+                if (instance == null) {
+                    instance = new xlInstance(cfg);
+                }
+            }
         }
 
-        return ret;
+        return instance;
     }
 
     private xlInstance(String cfg) throws xlException {
-        instance = this;
         configFileName = cfg;
         configProps = new Properties();
 
@@ -246,58 +284,85 @@ public class xlInstance {
 
     /**
      * 获取默认配置路径
-     * @return 获取默认配置路径
+     * 
+     * <p>按以下优先级查找配置路径：</p>
+     * <ol>
+     *   <li>系统属性 xlsql.config.path</li>
+     *   <li>环境变量 XLSQL_CONFIG_PATH</li>
+     *   <li>默认路径 ~/.xlsql/xlsql_config.properties</li>
+     * </ol>
+     * 
+     * @return 配置文件路径
      */
     private String getDefaultConfigPath() {
+        // 首先检查系统属性
         String configPath = System.getProperty("xlsql.config.path");
         if (configPath != null && !configPath.isEmpty()) {
             return configPath;
         }
-        // 默认使用用户目录下的日志文件
+        // 然后检查环境变量
+        configPath = System.getenv(XLSQL_CONFIG_PATH_ENV);
+        if (configPath != null && !configPath.isEmpty()) {
+            return configPath;
+        }
+        // 默认使用用户主目录
         return XLSQL_DEFAULT_PATH + File.separator + XLSQL_DEFAULT_CONFIG_PATH;
     }
 
-
     /**
      * 获取默认日志路径
-     * @return 默认日志文件路径
+     * 
+     * <p>按以下优先级查找日志路径：</p>
+     * <ol>
+     *   <li>系统属性 xlsql.log.path</li>
+     *   <li>环境变量 XLSQL_LOG_PATH</li>
+     *   <li>默认路径 ~/.xlsql/xlsql.log</li>
+     * </ol>
+     * 
+     * @return 日志文件路径
      */
     private String getDefaultLogPath() {
+        // 首先检查系统属性
         String logPath = System.getProperty("xlsql.log.path");
         if (logPath != null && !logPath.isEmpty()) {
             return logPath;
         }
-        // 默认使用用户目录下的日志文件
+        // 然后检查环境变量
+        logPath = System.getenv(XLSQL_LOG_PATH_ENV);
+        if (logPath != null && !logPath.isEmpty()) {
+            return logPath;
+        }
+        // 默认使用用户主目录
         return XLSQL_DEFAULT_PATH + File.separator + XLSQL_DEFAULT_LOG_PATH;
     }
 
     /**
-     * get log property
+     * 获取日志文件路径配置
      *
-     * @return log
+     * @return 日志文件路径
      */
     public String getLog() {
         return getProperty("general.log", getDefaultLogPath());
     }
 
     /**
-     * get database property
+     * 获取数据库路径配置
      *
-     * @return database
+     * @return 数据库路径，如果未配置则返回当前工作目录
      */
     public String getDatabase() {
         return getProperty("general.database", System.getProperty("user.dir"));
     }
 
     /**
-     * Excel database exporter
+     * 获取Excel数据库导出器
+     * 
+     * <p>根据指定的目录路径创建数据库导出器实例，用于导出Excel数据。</p>
      *
-     * @param dir Path to database
-     *
-     * @return Database exporter
-     *
-     * @throws xlException When an error occurs
-     * @throws IllegalArgumentException When dir is null or invalid
+     * @param dir 数据库目录路径
+     * @return 数据库导出器实例
+     * @throws xlException 如果导出器创建失败则抛出异常
+     * @throws IllegalArgumentException 如果目录路径为null或无效则抛出异常
      */
     public AExporter getExporter(String dir) throws xlException {
         AExporter ret;
@@ -319,11 +384,12 @@ public class xlInstance {
     }
 
     /**
-     * DOCUMENT ME!
+     * 获取xlSQL数据库实例
+     * 
+     * <p>根据当前配置的数据库路径创建数据库实例。</p>
      *
-     * @return DOCUMENT ME!
-     *
-     * @throws xlException DOCUMENT ME!
+     * @return xlSQL数据库实例
+     * @throws xlException 如果数据库创建失败则抛出异常
      */
     public ADatabase getXlDatabase() throws xlException {
         ADatabase ret = null;
@@ -339,9 +405,11 @@ public class xlInstance {
     }
 
     /**
-     * get java.sql.Connection to engine
+     * 连接到后端数据库引擎
+     * 
+     * <p>加载并注册后端数据库驱动（HSQLDB或MySQL），然后建立连接。</p>
      *
-     * @return Connection
+     * @return 到后端数据库的JDBC连接对象，如果连接失败则返回null
      */
     public Connection connect() {
         Connection ret = null;
@@ -350,7 +418,8 @@ public class xlInstance {
             String classname = this.getDriver();
             logger.info("=> loading driver: " + classname);
 
-            Driver d = (Driver) Class.forName(classname).newInstance();
+            // 使用 getDeclaredConstructor().newInstance() 替代已废弃的 newInstance()
+            Driver d = (Driver) Class.forName(classname).getDeclaredConstructor().newInstance();
             logger.info("OK. " + classname + " loaded.");
             logger.info("=> registering driver: " + classname);
             DriverManager.registerDriver(d);
@@ -368,6 +437,10 @@ public class xlInstance {
             logger.warning("Error while instantiating driver class. ..?");
         } catch (IllegalAccessException iae) {
             logger.warning("Illegal access. Have sources been modified?");
+        } catch (NoSuchMethodException nsme) {
+            logger.warning("Driver constructor not found: " + nsme.getMessage());
+        } catch (java.lang.reflect.InvocationTargetException ite) {
+            logger.warning("Error invoking driver constructor: " + ite.getMessage());
         } catch (SQLException sqe) {
             logger.warning("java.sql package reports: '" + sqe.getMessage()
                     + ":" + sqe.getSQLState() + "' ..?");
@@ -377,9 +450,9 @@ public class xlInstance {
     }
 
     /**
-     * DOCUMENT ME!
-     *
-     * @return DOCUMENT ME!
+     * 获取支持的数据库引擎列表
+     * 
+     * @return 支持的引擎名称数组（当前为"general"和"hsqldb"）
      */
     public String[] getEngines() {
         // 简化实现，返回固定引擎列表
@@ -387,15 +460,17 @@ public class xlInstance {
     }
 
     /**
-     * DOCUMENT ME!
+     * 添加新的数据库引擎配置
+     * 
+     * <p>初始化指定引擎的配置属性（驱动、URL、模式、用户、密码）。</p>
      *
-     * @param engine DOCUMENT ME!
+     * @param engine 引擎名称（如"hsqldb"或"mysql"）
      */
     public void addEngine(String engine) {
         this.engine = engine;
         setProperty("general.engine", engine);
 
-        // 初始化引擎相关属性
+        // 初始化引擎相关属性为空值
         setDriver("");
         setUrl("");
         setSchema("");
@@ -404,9 +479,11 @@ public class xlInstance {
     }
 
     /**
-     * DOCUMENT ME!
+     * 移除数据库引擎配置
+     * 
+     * <p>从配置中删除指定引擎的所有相关属性。</p>
      *
-     * @param engine DOCUMENT ME!
+     * @param engine 要移除的引擎名称
      */
     public void removeEngine(String engine) {
         // 移除引擎相关属性
@@ -419,11 +496,10 @@ public class xlInstance {
     }
 
     /**
-     * get engine property
+     * 获取当前配置的数据库引擎
      *
-     * @return engine
-     *
-     * @throws IllegalStateException DOCUMENT ME!
+     * @return 引擎名称（如"hsqldb"或"mysql"）
+     * @throws IllegalStateException 如果引擎未配置则抛出异常
      */
     public String getEngine() {
         String ret = getProperty("general.engine", null);
@@ -436,63 +512,68 @@ public class xlInstance {
     }
 
     /**
-     * get jdbc driver of sql engine
+     * 获取后端数据库的JDBC驱动类名
      *
-     * @return driver
+     * @return 驱动类的全限定名（如"org.hsqldb.jdbcDriver"）
      */
     public String getDriver() {
         return getProperty(getEngine() + ".driver", "");
     }
 
     /**
-     * get url of sql engine
+     * 获取后端数据库的连接URL
      *
-     * @return url
+     * @return 数据库连接URL
      */
     public String getUrl() {
         return getProperty(getEngine() + ".url", "");
     }
 
     /**
-     * get schema, database, initial context of sql engine
+     * 获取数据库模式（schema）名称
+     * 
+     * <p>模式名称用于指定数据库中的初始上下文或命名空间。</p>
      *
-     * @return schema
+     * @return 模式名称
      */
     public String getSchema() {
         return getProperty(getEngine() + ".schema", "");
     }
 
     /**
-     * get user of sql engine
+     * 获取数据库用户名
      *
-     * @return user
+     * @return 用户名
      */
     public String getUser() {
         return getProperty(getEngine() + ".user", "");
     }
 
     /**
-     * get password of sql engine user
+     * 获取数据库密码
+     * 
+     * <p><b>安全警告：</b>密码以明文形式存储在配置文件中。
+     * 请确保配置文件具有适当的文件权限。生产环境建议使用密码加密或环境变量。</p>
      *
-     * @return password
+     * @return 密码（明文）
      */
     public String getPassword() {
         return getProperty(getEngine() + ".password", "");
     }
 
     /**
-     * get logger
+     * 获取日志记录器
      *
-     * @return handle to instance logger
+     * @return 实例的日志记录器对象
      */
     public Logger getLogger() {
         return logger;
     }
 
     /**
-     * set log property
+     * 设置日志文件路径
      *
-     * @param log location of xlsql logfile
+     * @param log xlSQL日志文件的位置
      */
     public void setLog(String log) {
         this.log = log;
@@ -503,14 +584,15 @@ public class xlInstance {
     }
 
     /**
-     * set engine
+     * 设置数据库引擎
+     * 
+     * <p>切换到指定的数据库引擎，引擎必须是支持的引擎之一。</p>
      *
-     * @param newengine any of the supported sql engines
-     *
-     * @throws xlException DOCUMENT ME!
+     * @param newengine 要设置的SQL引擎名称（如"hsqldb"或"mysql"）
+     * @throws xlException 如果引擎名称无效则抛出异常
      */
     public void setEngine(String newengine) throws xlException {
-        // 简化验证
+        // 验证引擎名称不为空
         if (newengine != null && !newengine.isEmpty()) {
             this.engine = newengine;
             setProperty("general.engine", newengine);
@@ -523,9 +605,11 @@ public class xlInstance {
     }
 
     /**
-     * set database
+     * 设置数据库路径
+     * 
+     * <p>设置Excel数据库文件的根目录路径。</p>
      *
-     * @param database path to database
+     * @param database 数据库目录路径
      */
     public void setDatabase(String database) {
         this.database = database;
@@ -536,9 +620,9 @@ public class xlInstance {
     }
 
     /**
-     * set driver
+     * 设置后端数据库的JDBC驱动类名
      *
-     * @param driver java class of driver of sql engine
+     * @param driver SQL引擎的JDBC驱动类的全限定名
      */
     public void setDriver(String driver) {
         this.driver = driver;
@@ -549,9 +633,9 @@ public class xlInstance {
     }
 
     /**
-     * set url
+     * 设置后端数据库的连接URL
      *
-     * @param url required url for connecting to sql engine
+     * @param url 连接到SQL引擎所需的URL
      */
     public void setUrl(String url) {
         this.url = url;
@@ -562,9 +646,11 @@ public class xlInstance {
     }
 
     /**
-     * set schema
+     * 设置数据库模式（schema）名称
+     * 
+     * <p>设置连接到SQL引擎后的初始模式。</p>
      *
-     * @param schema initial schema after connect to sql engine
+     * @param schema 连接到SQL引擎后的初始模式名称
      */
     public void setSchema(String schema) {
         this.schema = schema;
@@ -575,9 +661,9 @@ public class xlInstance {
     }
 
     /**
-     * set user
+     * 设置数据库用户名
      *
-     * @param user user which connects to sql engine
+     * @param user 连接到SQL引擎的用户名
      */
     public void setUser(String user) {
         this.user = user;
@@ -588,15 +674,19 @@ public class xlInstance {
     }
 
     /**
-     * set password
+     * 设置数据库密码
+     * 
+     * <p><b>安全警告：</b>密码以明文形式存储在配置文件中。
+     * 生产环境建议使用密码加密或环境变量来存储敏感凭证。</p>
      *
-     * @param password password of sql engine user
+     * @param password SQL引擎用户的密码（以明文形式存储）
      */
     public void setPassword(String password) {
         this.password = password;
         setProperty(getEngine() + ".password", password);
         if (configModified) {
             saveProperties();
+            logger.warning("安全警告：在配置文件中直接存储密码是不推荐的。建议使用更安全的方法，如环境变量或凭证管理系统。");
         }
     }
 }
